--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -131,4 +131,4 @@ block content
                 form(action='/bids/#{bid.id}/reject', method='post')
                   input#submit_button(type='submit', name='', value='Reject Bid')
     section#map-container
-      div#map
+      div#map.map_styling
