--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -23,6 +23,7 @@ h3, h4, p{
 .profile_picture{
   box-shadow: 10px 10px 5px #2a2a2a;
   right: 10%;
+  width: 300px;
 }
 .username{
   text-decoration: underline;
