ready for show part 2

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -38,6 +38,8 @@ html
           li.navText
             a(href="/dashboard") Home
           li.navText
+            a(href="/tenders") Items for Trade
+          li.navText
             a(href="/tenders/new") Add Tender
           li.navText
             a.dropdown-button(href="#", data-activates="dropdown2") Profile
